# mas_domestic_robotics

mdr_kinematics/mdr_lwr_kinematics/: CMakeLists.txt  package.xml  setup.py
mdr_perception/mdr_object_recognition/: CMakeLists.txt  package.xml
mdr_perception/mdr_object_recognition/ros/launch/: object_recognition.launch
mdr_perception/mdr_perception_libs/ros/src/mdr_perception_libs/: keras_image_classifier.py  utils.py
mdr_planning/mdr_actions/mdr_manipulation_actions/mdr_pickup_action/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
mdr_planning/mdr_actions/mdr_manipulation_actions/mdr_pickup_action/launch/: pickup_action.launch
mdr_planning/mdr_actions/mdr_manipulation_actions/mdr_pickup_action/ros/action/: PickUp.action
mdr_planning/mdr_actions/mdr_manipulation_actions/mdr_pickup_action/ros/launch/: pickup_action.launch
mdr_planning/mdr_actions/mdr_manipulation_actions/mdr_pickup_action/scripts/: pickup_action.py  pickup_action_client_test.py
mdr_planning/mdr_actions/mdr_manipulation_actions/mdr_place_action/: CHANGELOG.rst  CMakeLists.txt  package.xml
mdr_planning/mdr_actions/mdr_perception_actions/mdr_perceive_plane_action/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
mdr_planning/mdr_actions/mdr_perception_actions/mdr_perceive_plane_action/action/: PerceivePlane.action
mdr_planning/mdr_actions/mdr_perception_actions/mdr_perceive_plane_action/launch/: perceive_plane.launch
mdr_planning/mdr_actions/mdr_perception_actions/mdr_perceive_plane_action/ros/launch/: perceive_plane.launch  perceive_plane_test.launch
mdr_planning/mdr_actions/mdr_perception_actions/mdr_perceive_plane_action/ros/scripts/: perceive_plane_action  perceive_plane_client  perceive_plane_client_test
mdr_planning/mdr_actions/mdr_perception_actions/mdr_perceive_plane_action/ros/src/mdr_perceive_plane_action/: action_states.py
mdr_planning/mdr_actions/mdr_perception_actions/mdr_perceive_plane_action/scripts/: perceive_plane_action
mdr_planning/mdr_actions/mdr_perception_actions/mdr_perceive_plane_action/src/mdr_perceive_plane_action/: action_states.py
(+12 files in other folders)
